--- a/public/chat.html
+++ b/public/chat.html
@@ -9,6 +9,9 @@
 			<input type="submit" value="clickable button">
 		</form>
 		<a href="/index.html">Change Settings</a>
+
+		<h1 class="room-title"></h1>
+
 		<div class="messages">
 			<!-- Messages end up here! -->  
 		</div>
